--- a/AndroidHomeWork2/app/src/main/res/layout/item_user.xml
+++ b/AndroidHomeWork2/app/src/main/res/layout/item_user.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/lime_green"
+    android:background="@color/teal_200"
     android:padding="@dimen/default_space_padding"
     android:layout_margin="@dimen/default_space_padding">
 
